--- a/EscapeSquares/src/application/EasyLevel.fxml
+++ b/EscapeSquares/src/application/EasyLevel.fxml
@@ -14,7 +14,7 @@
 
 <AnchorPane fx:id="scenePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="698.0" prefWidth="692.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LevelController">
    <children>
-      <Label fx:id="titleLabel" layoutY="22.0" prefHeight="17.0" prefWidth="692.0" text="EscapeSquares  --Easy Level--" />
+      <Label fx:id="titleLabel" layoutY="22.0" prefHeight="17.0" prefWidth="692.0" text="EscapeSquares  --Normal Level--" />
       <GridPane fx:id="gridPaneDesign" gridLinesVisible="true" layoutX="43.0" layoutY="112.0" prefHeight="454.0" prefWidth="310.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
